--- a/package.json
+++ b/package.json
@@ -24,7 +24,8 @@
     "dev:native": "turbo -F native dev",
     "dev:web": "turbo -F web dev",
     "dev:server": "turbo -F @echo/backend dev",
-    "dev:setup": "turbo -F @echo/backend dev:setup"
+    "dev:setup": "turbo -F @echo/backend dev:setup",
+    "ralph": "cd scripts/ralph/tui && go build -o ../ralph-tui && cd .. && ./ralph-tui"
   },
   "dependencies": {
     "@echo/env": "workspace:*",
