--- a/packages/backend/package.json
+++ b/packages/backend/package.json
@@ -13,6 +13,7 @@
     "better-auth": "catalog:",
     "convex": "catalog:",
     "dotenv": "catalog:",
+    "openai": "^6.16.0",
     "zod": "catalog:"
   },
   "devDependencies": {
