feat: S03 - Add Shopify environment variables to env package

--- a/packages/backend/.env.local.example
+++ b/packages/backend/.env.local.example
@@ -5,3 +5,8 @@ CONVEX_DEPLOYMENT=dev:your-project-name
 STRIPE_SECRET_KEY=sk_test_xxx
 STRIPE_WEBHOOK_SECRET=whsec_xxx
 STRIPE_PUBLISHABLE_KEY=pk_test_xxx
+
+# Shopify integration (optional - required scopes: read_products, write_orders, read_orders)
+SHOPIFY_API_KEY=your_shopify_app_client_id
+SHOPIFY_API_SECRET=your_shopify_app_secret_min_32_chars
+SHOPIFY_SCOPES=read_products,write_orders,read_orders
