--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -13,6 +13,7 @@
     "@convex-dev/react-query": "^0.1.0",
     "@echo/backend": "workspace:*",
     "@echo/env": "workspace:*",
+    "@radix-ui/react-dialog": "^1.1.15",
     "@tailwindcss/vite": "^4.1.8",
     "@tanstack/react-form": "^1.23.5",
     "@tanstack/react-query": "^5.80.6",
@@ -24,6 +25,7 @@
     "better-auth": "catalog:",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "cmdk": "^1.1.1",
     "convex": "catalog:",
     "date-fns": "^4.1.0",
     "dotenv": "catalog:",
