feat: S05 - Set up MDX content collections

--- a/apps/marketing/tsconfig.json
+++ b/apps/marketing/tsconfig.json
@@ -1,6 +1,6 @@
 {
   "extends": "astro/tsconfigs/strict",
-  "include": ["src/**/*", "astro.config.mjs"],
+  "include": [".astro/types.d.ts", "src/**/*", "astro.config.mjs"],
   "compilerOptions": {
     "target": "ESNext",
     "module": "ESNext",
