--- a/packages/backend/.env.local.example
+++ b/packages/backend/.env.local.example
@@ -10,3 +10,8 @@ STRIPE_PUBLISHABLE_KEY=pk_test_xxx
 SHOPIFY_API_KEY=your_shopify_app_client_id
 SHOPIFY_API_SECRET=your_shopify_app_secret_min_32_chars
 SHOPIFY_SCOPES=read_products,write_orders,read_orders
+
+# Meta (Facebook/Instagram) integration
+META_APP_ID=your_meta_app_id
+META_APP_SECRET=your_meta_app_secret
+META_WEBHOOK_VERIFY_TOKEN=your_random_webhook_verify_token
