--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -29,15 +29,21 @@
     "convex": "catalog:",
     "date-fns": "^4.1.0",
     "dotenv": "catalog:",
+    "embla-carousel-react": "^8.6.0",
+    "input-otp": "^1.4.2",
     "lucide-react": "^0.525.0",
     "next-themes": "^0.4.6",
     "react": "19.2.3",
+    "react-day-picker": "^9.13.0",
     "react-dom": "19.2.3",
+    "react-resizable-panels": "^4.5.2",
+    "recharts": "2.15.4",
     "shadcn": "^3.6.2",
-    "sonner": "^2.0.3",
+    "sonner": "^2.0.7",
     "tailwind-merge": "^3.3.1",
     "tailwindcss": "^4.1.3",
     "tw-animate-css": "^1.2.5",
+    "vaul": "^1.1.2",
     "vite-tsconfig-paths": "^5.1.4",
     "zod": "catalog:"
   },
