Ok fixing stuff

--- a/biome.json
+++ b/biome.json
@@ -12,8 +12,10 @@
 			"dist",
 			".turbo",
 			".convex",
+			".wrangler",
 			"apps/web/.vinxi",
 			"apps/web/.output",
+			"apps/web/.wrangler",
 			"apps/web/src/components/ui/**",
 			"packages/backend/.convex",
 			"apps/fumadocs/**",
