fix: run pre-push hooks sequentially to avoid build race conditions
Changed parallel: true -> false to prevent intermittent esbuild EPIPE errors
when lint, typecheck, and build run simultaneously.

Trade-off: ~10s slower push, but more stable builds.

--- a/lefthook.yml
+++ b/lefthook.yml
@@ -10,7 +10,7 @@ pre-commit:
       run: bun run check-types
 
 pre-push:
-  parallel: true
+  parallel: false
   commands:
     lint:
       run: bun run check
