--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
 		"dev": "turbo dev",
 		"build": "turbo build",
 		"check-types": "turbo check-types",
+		"clean": "rm -rf .turbo apps/*/.turbo apps/*/dist packages/*/dist apps/*/.wrangler",
 		"lint": "biome lint .",
 		"lint:fix": "biome lint --write .",
 		"check": "biome check .",
